<resources>
    <string name="app_name">abdo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Button strings -->
    <string name="button_ok">Ok</string>
    <string name="button_new_child">Opret barn</string>
    <string name="button_type_code">Indtast kode</string>
    <string name="button_restore_from_email">Gendan fra email</string>

    <!-- EditText strings -->
    <string name="type_code_hint">Indtast delekoden</string>
    <string name="type_email_hint">Indtast din email</string>

    <!-- TextView strings -->
    <string name="title_code">Delekode</string>
    <string name="title_restore">Gendan</string>

    <!-- New user / Front page -->
    <string name="new_user_register">Registrer dit barn hos abdo.</string>
    <string name="new_user_code">Få adgang til et registreret barn, ved at bruge en delekode.</string>
    <string name="new_user_email">Gendan din tidligere bruger via. email.</string>

    <!-- Create Child Overview -->
    <string name="child_overview_header">Udfyld informationer om dit barn herunder.</string>
    <string name="child_overview_stamdata">Stamdata</string>
    <string name="child_overview_medicine">Medicin</string>
    <string name="child_overview_allergy">Allergi</string>
    <string name="child_overview_supplement">Kosttilskud</string>

    <!-- Pain level strings-->
    <string name="pain_level_1">Normal</string>
    <string name="pain_level_2">Mest lyst til at ligge stille</string>
    <string name="pain_level_3">Tænker hele tiden, på at det gør ondt</string>
    <string name="pain_level_4">Lyst til at græde</string>
    <string name="pain_level_5">Græder og kan intet</string>

    <!-- Sleep level strings-->
    <string name="sleep_level_1">Sov godt hele natten</string>
    <string name="sleep_level_2">Vågnede et par gange</string>
    <string name="sleep_level_3">Havde problemer med at falde i søvn</string>
    <string name="sleep_level_4">Havde uhyggelige drømme</string>
    <string name="sleep_level_5">Har ikke sovet</string>

    <!-- Mood level strings-->
    <string name="mood_level_1">Glad</string>
    <string name="mood_level_2">Ikke rigtig glad</string>
    <string name="mood_level_3">Er hele tiden bekymret</string>
    <string name="mood_level_4">Lyst til at græde</string>
    <string name="mood_level_5">Græder og kan intet</string>

    <!-- Activity level strings-->
    <string name="activity_level_1">Ingen</string>
    <string name="activity_level_2">Næsten ingen</string>
    <string name="activity_level_3">Lidt</string>
    <string name="activity_level_4">En del</string>
    <string name="activity_level_5">Rigtig meget</string>


    <!--Web api-->
    <string name="api_anonymous">http://abdoapi.azurewebsites.net/api/anonymous/</string>
    <string name="api_allergy">http://abdoapi.azurewebsites.net/api/allergy/</string>
    <string name="api_supplement">http://abdoapi.azurewebsites.net/api/supplement/</string>
    <string name="api_registration">http://abdoapi.azurewebsites.net/api/registration/</string>
    <string name="api_feces">http://abdoapi.azurewebsites.net/api/feces/</string>
    <string name="api_foodcategory">http://abdoapi.azurewebsites.net/api/foodcategory/</string>
    <string name="api_child">http://abdoapi.azurewebsites.net/api/child/</string>
    <string name="api_food">http://abdoapi.azurewebsites.net/api/food/</string>
    <string name="api_sharecode">http://abdoapi.azurewebsites.net/api/sharecode/</string>
    <string name="api_email">http://abdoapi.azurewebsites.net/api/email/</string>

    <string name="error">Der skete en fejl.</string>

    <string name="sharecode_generate_full">Med en delekode, kan andre enheder få adgang til dette barns data. Koden er aktiv i 5 minutter efter generering."</string>
    <string name="sharecode_generated">Du kan nu dele dit barns data med nedenstående delekode</string>

    <string name="sharecode_text">Indast delekode</string>

    <string name="device_id">QE58711871dds81dg838344fga</string>


    <!-- Navigation Drawer menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_register">Hjem</string>
    <string name="nav_childinfo">Stamdata</string>
    <string name="nav_calender">Registreringer</string>
    <string name="nav_sharecode">Delekode</string>
    <string name="nav_restore">Gendannelsesemail</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


</resources>
