<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBeige"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginBottom="50px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="100px">

        <ImageView
            android:scaleType="fitXY"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/monkey_full"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnNewChild"
            android:layout_marginTop="50px"
            android:layout_width="match_parent"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:text="@string/button_new_child"
            />
        <Button
            android:id="@+id/btnTypeCode"
            android:layout_marginTop="20px"
            android:layout_width="match_parent"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:text="@string/button_type_code"
            />
        <Button
            android:id="@+id/btnRestoreFromEmail"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:text="@string/button_restore_from_email"
            />
    </LinearLayout>
</LinearLayout>